<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#161517"
    android:orientation="vertical"
    tools:context=".gamesandflashcards.GamesAndFlashcardsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/happy_books"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/read_these_english_short_books"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:text="@string/and_be_good_at_reading"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <GridView
        android:id="@+id/books_grid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:numColumns="2"
        android:horizontalSpacing="8dp"
        android:verticalSpacing="10dp"/>
</LinearLayout>